--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
+        <h1 class="header center teal-text text-lighten-2">Teaching students</h1>
         <div class="row center">
-          <h5 class="header col s12 light">Bijles op maat voor u of u kind</h5>
+          <h5 class="header col s12 light">Bijles op maat voor u of u kind door studenten</h5>
         </div>
         <div class="row center">
           <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
