--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4 id="contactustekst">Wie zijn wij</h4>
-            <img data-brackets-id='654' src="afbeelding_jochem.jpg" alt="afbeelding_van_geweldige_b" class="circle responsive-img left">
+            <img data-brackets-id='654' src="afbeelding_jochem.jpg" alt="afbeelding_van_geweldige_b" class="responsive-img left">
             
           <p class="left-align light">Jochem veldman is een enthousiaste student informatiekunde aan de universiteit van Amsterdam. Na het VWO met mooie cijfers afgerond te hebben is hij zich gaan orienteren op een studie waaruit bleek dat informatiekunde het meest bij hem paste. Door de kennis die Jochem in de loop de loop van zijn schoolbaan heeft opgedaan geeft hij nu bijles in wiskunde A, geschiedenis, aardrijkskunde en scheikunde. Tevens kan Jochem ook helpen met het geven van biologie. Mocht u in een van deze vakken bijles willen kunt u Jochem bereiken via het nummer 06-26338810 of via zijn mail jochemveldman@hotmail.com.  </p>
         </div>
