--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="section">
 
       <div class="row">
-        <div class="col s12 center">
+        <div class="col offset-s1 s10 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4 id="contactustekst">Wie zijn wij</h4>
             <img data-brackets-id='654' src="afbeelding_jochem.jpg" alt="afbeelding_van_geweldige_b" class="responsive-img left">
@@ -135,7 +135,7 @@
     <div class="section">
 
       <div class="row">
-        <div class="col s12 center">
+        <div class="col offset-s1 s10center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
             <img data-brackets-id='662' src="afbeelding_reinier.jpg" alt="afbeelding_van_geweldige_b" class="circle responsive-img right">
             
