--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
             });
         });
     </script>
+        
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-91433464-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 
 
     <body>
@@ -50,7 +61,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">Teaching students</h1>
+        <h1 class="header center text-lighten-3">Teaching students</h1>
         <div class="row center">
           <h5 class="header col s12 light">Bijles op maat voor u of u kind door studenten</h5>
         </div>
@@ -61,7 +72,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="bijles1.jpg" alt="Unsplashed background img 1"></div>
     </div>
 
 
@@ -135,7 +146,7 @@
     <div class="section">
 
       <div class="row">
-        <div class="col offset-s1 s10center">
+        <div class="col offset-s1 s10 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
             <img data-brackets-id='662' src="afbeelding_reinier.jpg" alt="afbeelding_van_geweldige_b" class="circle responsive-img right">
             
