--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <h2 class="center brown-text"><i class="material-icons">group</i></h2>
             <h5 class="center">Één op één begeleiding</h5>
 
-            <p class="light">Met onze intensieve een op een begeleiding zal de begeleiding niet ophouden na de les. Wij zullen naast de begeleiding van het schoolwerk ook zorgen voor motivatie bij de leerling waardoor deze ook na onze les goed en gemakkelijk aan de slag zal gaan met schoolwerk. </p>
+            <p class="light">Met onze intensieve één op één begeleiding zal de begeleiding niet ophouden na de les. Wij zullen naast de begeleiding van het schoolwerk ook zorgen voor motivatie bij de leerling waardoor deze ook na onze les goed en gemakkelijk aan de slag zal gaan met schoolwerk. </p>
           </div>
         </div>
 
