telefoonnummer en email weg

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <h4 id="contactustekst">Wie zijn wij</h4>
             <img data-brackets-id='654' src="afbeelding_jochem.jpg" alt="afbeelding_van_geweldige_b" class="responsive-img left">
             
-          <p class="left-align light">Jochem veldman is een enthousiaste student informatiekunde aan de universiteit van Amsterdam. Na het VWO met mooie cijfers afgerond te hebben is hij zich gaan orienteren op een studie waaruit bleek dat informatiekunde het meest bij hem paste. Door de kennis die Jochem in de loop de loop van zijn schoolbaan heeft opgedaan geeft hij nu bijles in wiskunde A, geschiedenis, aardrijkskunde en scheikunde. Tevens kan Jochem ook helpen met het geven van biologie. Mocht u in een van deze vakken bijles willen kunt u Jochem bereiken via het nummer 06-26338810 of via zijn mail jochemveldman@hotmail.com.  </p>
+          <p class="left-align light">Jochem veldman is een enthousiaste student informatiekunde aan de universiteit van Amsterdam. Na het VWO met mooie cijfers afgerond te hebben is hij zich gaan orienteren op een studie waaruit bleek dat informatiekunde het meest bij hem paste. Door de kennis die Jochem in de loop de loop van zijn schoolbaan heeft opgedaan geeft hij nu bijles in wiskunde A, geschiedenis, aardrijkskunde en scheikunde. Tevens kan Jochem ook helpen met het geven van biologie. </p>
         </div>
       </div>
 
@@ -150,7 +150,7 @@
           <h3><i class="mdi-content-send brown-text"></i></h3>
             <img data-brackets-id='662' src="afbeelding_reinier.jpg" alt="afbeelding_van_geweldige_b" class="circle responsive-img right">
             
-          <p class="left-align light">Reinier Bock is een leergierige student economie en bedrijfskunde aan de universiteit van Amsterdam. Reinier blonk altijd al op de middelbare school uit op het gebied van economie en M&O. Hierom was een studie economie en brijfskunde ook een logische keus voor hem. Reinier geeft bijles in geschiedenis, aardrijskunde, wiskunde A, economie en M&O. Mocht u in een van deze vakken bijles willen kunt Reinier bereiken via het nummer 06-24659233 of via zijn mail reinier_007@hotmail.com</p>
+          <p class="left-align light">Reinier Bock is een leergierige student economie en bedrijfskunde aan de universiteit van Amsterdam. Reinier blonk altijd al op de middelbare school uit op het gebied van economie en M&O. Hierom was een studie economie en brijfskunde ook een logische keus voor hem. Reinier geeft bijles in geschiedenis, aardrijskunde, wiskunde A, economie en M&O. </p>
         </div>
       </div>
 
